# oath-protocol

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SPEC_LICENSE
.github/ISSUE_TEMPLATE/: bug_report.md  spec_discussion.md
crates/oath-cli/: Cargo.toml
crates/oath-cli/src/: main.rs  store_path.rs
crates/oath-cli/src/commands/: attest.rs  history.rs  init.rs  mod.rs  verify.rs  whoami.rs
crates/oathkit-core/: Cargo.toml
crates/oathkit-core/src/: attestation.rs  error.rs  keys.rs  lib.rs  store.rs  verify.rs
demo/: README.md  agent.py
spec/: OATH_SPEC.md
