[workspace]
members = [
    "crates/oathkit-core",
    "crates/oath-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Oath Protocol Contributors"]
license = "MIT"
repository = "https://github.com/oath-protocol/oath-protocol"
homepage = "https://github.com/oath-protocol/oath-protocol"
keywords = ["attestation", "cryptography", "authorization", "ai-agents", "crdt"]
categories = ["cryptography", "authentication"]

[workspace.dependencies]
# Cryptography
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
zeroize = { version = "1", features = ["zeroize_derive"] }
base64ct = { version = "1", features = ["alloc"] }
hex = "0.4"

# Data formats
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Random
rand = "0.8"
rand_core = "0.6"

# Error handling
thiserror = "1"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async
tokio = { version = "1", features = ["full"] }
